fixed alignment date ?

--- a/view/css/style.css
+++ b/view/css/style.css
@@ -1177,6 +1177,7 @@ textarea{
 }
 input.date{
 	width:80px;
+	margin-left: 12px;
 }
 
 div.passwordstrength{
